force-app/main/default/objects/LLC_BI__Index__mdt/LLC_BI__Index__mdt.object-meta.xml
<CustomObject>
    <description>Financial indices used to better price loans with current market rates. Certain indices are available per product.</description>
    <label>Index</label>
    <pluralLabel>Indices</pluralLabel>
</CustomObject>