force-app/main/default/objects/LLC_BI__Index__mdt/fields/LLC_BI__Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates this Index is in use.</description>
    <inlineHelpText>Indicates this Index is in use.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>