force-app/main/default/objects/LLC_BI__Index__mdt/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>Category</description>
    <inlineHelpText>Category</inlineHelpText>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>