force-app/main/default/objects/LLC_BI__Index__mdt/fields/LLC_BI__Modification_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Modification_Schedule__c</fullName>
    <description>Update Frequency</description>
    <inlineHelpText>Update Frequency</inlineHelpText>
    <label>Modification Schedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>