force-app/main/default/objects/LLC_BI__Index__mdt/fields/LLC_BI__Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Name__c</fullName>
    <description>Index Name</description>
    <inlineHelpText>Index Name</inlineHelpText>
    <label>Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>