force-app/main/default/objects/LLC_BI__Index__mdt/listViews/Non_Managed.listView-meta.xml
<ListView>
    <fullName>Non_Managed</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>LLC_BI__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NamespacePrefix</field>
        <operation>equals</operation>
    </filters>
    <label>Non Managed</label>
    <language>en_US</language>
</ListView>